# oped-front

./: .env.example  .gitignore  Cargo.toml  Trunk.toml  index.html  tailwind.config.js
src/: app.rs  constants.rs  main.rs  models.rs  routes.rs  tailwind.css
src/api/: fetch_profile.rs  fetch_user.rs  fetch_user_login.rs  fetch_user_registration.rs  fetch_users.rs  mod.rs  models.rs
src/components/: button.rs  header.rs  input.rs  login_form.rs  mod.rs  registration_form.rs  users_list.rs  users_table.rs
src/context/: auth_context.rs  mod.rs
src/contexts/: auth_context.rs  mod.rs
src/hocs/: mod.rs  with_auth.rs  with_profile.rs  without_auth.rs
src/hooks/: mod.rs  use_logout.rs
src/pages/: home_page.rs  login_page.rs  mod.rs  not_found_page.rs  profile_page.rs  registration_page.rs  user_page.rs  users_page.rs
