[package]
name = "rust-yew-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
gloo = { version = "0.8.1" }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = { version = "1.0.102" }
yew-router = { version = "0.17.0" }
wasm-bindgen = { version = "0.2.87" }
web-sys = { version = "0.3.64", features = ["HtmlInputElement"] }
reqwasm = { version = "0.5.0" }